# rust-ethernet-ip

./: Cargo.toml
benches/: udt_discovery_benchmark.rs
examples/: batch_benchmark.rs  tag_operations.rs  tag_test.rs  test_improved_tag_discovery.rs  test_tag_discovery_fix.rs  udt_discovery_demo.rs
examples/gonextjs/backend/: main.go
examples/gonextjs/frontend/: package-lock.json  package.json
examples/gonextjs/frontend/.next/: trace
examples/gonextjs/frontend/.next/cache/webpack/client-development/: index.pack.gz.old
examples/gonextjs/frontend/.next/cache/webpack/server-development/: index.pack.gz.old
examples/gonextjs/frontend/.next/server/: server-reference-manifest.json
examples/gonextjs/frontend/.next/server/app/: page.js
examples/gonextjs/frontend/src/app/: globals.css  page.tsx
examples/gonextjs/frontend/src/lib/: plcApi.ts
gowrapper/: rust_ethernet_ip.dll.lib
src/: lib.rs  tag_manager.rs
tests/: comprehensive_test.rs  udt_discovery_tests.rs
