[package]
name = "rust-ethernet-ip"
version = "0.5.3"
edition = "2021"
authors = ["Sergio Gallegos <sergio@example.com>"]
description = "High-performance EtherNet/IP communication library for Allen-Bradley CompactLogix and ControlLogix PLCs"
license = "MIT"
repository = "https://github.com/FredPlouffe/rust-ethernet-ip"
homepage = "https://github.com/FredPlouffe/rust-ethernet-ip"
documentation = "https://docs.rs/rust_ethernet_ip"
readme = "README.md"
keywords = ["ethernet-ip", "plc", "industrial", "automation", "allen-bradley"]
categories = ["network-programming", "embedded", "api-bindings"]
rust-version = "1.70"

# Exclude large files that aren't needed for the library
exclude = [
    "examples/**/frontend/.next/",
    "examples/**/frontend/node_modules/",
    "**/package-lock.json",
    "**/*.dll.a",
    "**/*.dll",
    "**/*.so",
    "**/*.dylib",
    "**/*.exe",
    "**/*.lib",
    "**/*.pdb",
    "**/target/",
    "**/.next/",
    "**/dist/",
    "**/build/",
    "**/cache/",
    "**/.vscode/",
    "**/.idea/",
    "**/.vs/",
    "**/bin/",
    "**/obj/",
    "**/.next/trace",
    "examples/**/bin/",
    "examples/**/obj/",
    # EXCLUEZ aussi le pywrapper pour éviter qu'il soit compilé
    "pywrapper/",
]

[lib]
name = "rust_ethernet_ip"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "enip-test"
path = "src/main.rs"

[[bench]]
name = "performance_benchmark"
harness = false

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
vergen = { version = "8.3", features = ["build", "git", "gitcl"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
regex = "1.0"
pyo3 = { version = "0.26", features = ["extension-module"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
cargo-tarpaulin = "0.27"
criterion = "0.5"

[features]
default = []
python = ["pyo3"]
ffi = []  # Enable C FFI exports

[build-dependencies]
vergen = { version = "8.3", features = ["build", "git", "gitcl"] }